Fixed whitespace & textarea size
It's not a complete fix. Now the size of text areas is larger then desired in chrome. Will look into that later, for now this fix works.

--- a/styles.css
+++ b/styles.css
@@ -21,10 +21,26 @@ body {
 	font-family: 'ubuntu', sans-serif;
 }
 
-textarea, select {
+textarea {
 	background-color: white;
 	color: black;
 	resize: none;
+	width: 90px;
+	height: 17px;
+	line-height: 14px;
+	font: 12px 'ubuntu', sans-serif;
+	font-weight: bold;
+	border: 2px solid black;
+	border-radius: 3px;
+}
+
+select {
+	background-color: white;
+	color: black;
+	resize: none;
+	width: 96px;
+	height: 21px;
+	line-height: 14px;
 	font: 12px 'ubuntu', sans-serif;
 	font-weight: bold;
 	border: 2px solid black;
@@ -44,7 +60,6 @@ button {
 	font-size: 11px;
 	font-weight: bold;
 	border-radius: 2px;
-	-webkit-transition-duration: 0.1s;
 	transition-duration: 0.1s;
 }
 
@@ -62,7 +77,7 @@ button:active {
 #watermark {
 	position: absolute;
 	right: 10px;
-	font: ubuntu 32px;
+	font: 'ubuntu', sans-serif;
 }
 
 #editbutton {
@@ -305,6 +320,7 @@ button:active {
 	border: 2px solid black;
 	border-radius: 5px;
 	background-color: #555;
+	line-height: 14px;
 	padding: 3px;
 	position: fixed;
 	bottom: 0;
